--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -448,4 +448,4 @@ en:
   account_not_active: "Account Not Active"
   account_not_active_description: "Your account is not yet linked to a school, district, or transportation system. Select “Activate Account” and complete the registration process to gain access to the SafeStop service."
 
-
+  not_available: "NOT AVAILABLE"
