--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -481,3 +481,4 @@ en:
   search_available_jurisdictions: "Search available jurisdictions"
   alert: "ALERT"
   your_alert_will_be_sent_to_jurisdictions: "Your alert will be sent to the following jurisdiction(s)"
+  your_alert_will_be_sent_to_buses: "Your alert will be sent to the following bus(es)"
