--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -414,6 +414,10 @@ fr:
   send_alert: "SEND ALERT"
   account_not_active: "Account Not Active"
   account_not_active_description: "Your account is not yet linked to a school, district, or transportation system. Select “Activate Account” and complete the registration process to gain access to the SafeStop service."
+  report_a_service_issue: "SIGNALER UN PROBLÈME DE SERVICE"
+  driver: "Chauffeur"
+  vehicle: "Véhicule"
+  schedule: "Calendrier"
 
 
 
