--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -484,3 +484,8 @@ en:
   your_alert_will_be_sent_to_routes: "Your alert will be sent to the following bus route(s)"
   your_alert_will_be_sent_to_stops: "Your alert will be sent to the following bus stop(s)"
   your_alert_has_been_submitted: "Your alert has been submitted"
+  report_a_service_issue: "REPORT A SERVICE ISSUE"
+  driver: "Driver"
+  vehicle: "Vehicle"
+  schedule: "Schedule"
+
