--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,8 @@
 fr:
 
-  english: "anglais"
-  french: "français"
+  english: "Anglais"
+  french: "Français"
+  spanish: "Espagnol"
 
 
   #Prompt Messages
