--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -136,6 +136,7 @@ fr:
   user_guide: "GUIDE D’UTILISATION"
   login: "SE CONNECTER"
 
+  expected_time_not_available: "--:-- --"
   ss_index_hero_1: "SafeStop est l'application mobile de suivi des bus de ramassage scolaire, leader sur le marché, qui facilite la vie des parents, trajet par trajet"
   ss_index_hero_2: "Avec les cartes des quartiers et les heures d'arrivée prévues à portée de main, les parents n'ont plus besoin d'appeler l'école pour savoir où se trouve le bus ?"
   ss_index_hero_3: "SafeStop fonctionne avec n'importe quel GPS, logiciel d’itinéraire, système de transport urbain ; notre application est ainsi compatible avec toutes les flottes de bus quelle qu’en soit la configuration"
@@ -380,7 +381,7 @@ fr:
   student_1_description: "Student ID Number 1 (Required)"
   create_an_account: "CREATE AN ACCOUNT"
   account_creation: "Account Creation"
-  add_school_or_district: "ADD SCHOOL OR DISTRICT"
+  add_school_or_district: "AJOUTER UNE ÉCOLE OU UN ARRONDISSEMENT SCOLAIRE"
   add_student: "ADD STUDENT"
   add_scan_code: "ADD SCAN CODE"
   add_sub_account: "ADD SUB ACCOUNT"
@@ -405,14 +406,14 @@ fr:
   my_bus_does_not_appear_to_be_updating: "My bus doesn't appear to be moving/updating"
   my_routing_information_is_wrong: "My scheduled route or stop information is wrong"
   my_eta_is_inaccurate: "The ETA for my bus stop is inaccurate"
-  report_an_app_issue: "REPORT AN APP ISSUE"
+  report_an_app_issue: "Signaler un problème avec l’application"
   manage_student_scanning: "MANAGE STUDENT SCANNING"
   manage_sub_accounts: "MANAGE SUB ACCOUNTS"
   add_student_id: "ADD STUDENT ID"
   activate_account: "ACTIVATE ACCOUNT"
   state_or_province: "State or Province"
   manage_account: "MANAGE ACCOUNT"
-  send_alert: "SEND ALERT"
+  send_alert: "ENVOYER UNE ALERTE"
   account_not_active: "Account Not Active"
   account_not_active_description: "Your account is not yet linked to a school, district, or transportation system. Select “Activate Account” and complete the registration process to gain access to the SafeStop service."
   report_a_service_issue: "SIGNALER UN PROBLÈME DE SERVICE"
