--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -489,4 +489,6 @@ en:
   driver: "Driver"
   vehicle: "Vehicle"
   schedule: "Schedule"
+  start_time: "Start Time:"
+  scheduled_time: "Scheduled Time: "
 
